fix(navbar): remove title nowrap to accommodate long application names (#1957)

--- a/packages/application-shell/src/components/navbar/navbar.mod.css
+++ b/packages/application-shell/src/components/navbar/navbar.mod.css
@@ -165,7 +165,6 @@
 
 :global(.body__menu-open) .list-item .title {
   display: block;
-  white-space: nowrap;
   opacity: 1;
   margin-left: var(--spacing-m);
   color: var(--color-surface);
